Enhance chat interface with L'Oréal branding and improve message handling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
     <div class="page-wrapper">
       <!------- Header / Branding ------->
       <header class="site-header">
-        <h1 class="site-title">Smart Product Advisor</h1>
+        <div class="brand">
+          <img
+            src="img/loreal-logo.png"
+            alt="L'Oréal logo"
+            class="brand-logo"
+          />
+          <h1 class="site-title">Smart Product Advisor</h1>
+        </div>
+        <p class="site-tagline">
+          Makeup tips, routines, and product guidance — powered by L’Oréal
+        </p>
       </header>
 
       <!------- Chat Area ------->
